# wxLauncher

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  Authors.md  Authors.txt  CMakeLists.txt  CodingStyle.txt  License.txt  ReadMe.ContentAuthors.md  ReadMe.md  ReadMe.txt  Thanks.txt  Thanks.txt.txt  appveyor.yml
ci/appveyor/: build.cmd  build_openal.cmd  build_wxwidgets.cmd  load_openal.ps1  load_wxwidgets.ps1
ci/travis/: before_install.sh  before_script.sh  install.sh  script.sh
cmake/: FailCPack.cmake.in  GetVersionFromGitTag.cmake  setup_submodules.cmake  test_wxstl.cpp  wxLauncherInstaller.cmake  wxl_platforms.cmake
cmake/include/: NSIS.template.in
cmake/modules/: modules.cmake
code/: AdvSettingsPage.cpp  AdvSettingsPage.h  BasicSettingsPage.cpp  BasicSettingsPage.h  BottomButtons.cpp  BottomButtons.h  FSOExecutable.cpp  FSOExecutable.h  FlagInfo.cpp  FlagList.cpp  FlagList.h  HelpManager.cpp  HelpManager.h  InstallPage.cpp  InstallPage.h  JoystickManager.cpp  JoystickManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  ModGrid.cpp  ModGrid.h  ModList.cpp  ModList.h  ModsPage.cpp  ModsPage.h  OpenALManager.cpp  OpenALManager.h  OpenAlManager.h  PlatformProfileManager.h  ProfileManager.cpp  ProfileManager.h  Skin.cpp  Skin.h  SpeechManager.cpp  SpeechManager.h  StatusBar.cpp  StatusBar.h  StatusLog.cpp  (+15 more)
code/apis/: CmdLineManager.cpp  CmdLineManager.h  EventHandlers.cpp  EventHandlers.h  FREDManager.cpp  FREDManager.h  FileProfileManager.cpp  FlagListManager.cpp  FlagListManager.h  HelpManager.cpp  HelpManager.h  JoystickManager.cpp  JoystickManager.h  OpenALManager.cpp  OpenALManager.h  PlatformProfileManager.h  PlatformProfileManagerShared.cpp  ProfileManager.cpp  ProfileManager.h  ProfileManagerOperator.cpp  ProfileManagerOperator.h  ProfileProxy.cpp  ProfileProxy.h  RegistryProfileManager.cpp  SkinManager.cpp  SkinManager.h  SpeechManager.cpp  SpeechManager.h  TCManager.cpp  TCManager.h  resolution_manager.cpp  resolution_manager.hpp
code/controls/: BottomButtons.cpp  BottomButtons.h  FlagList.cpp  FlagList.h  FlagListBox.cpp  FlagListBox.h  LightingPresets.cpp  LightingPresets.h  Logger.cpp  Logger.h  ModList.cpp  ModList.h  StatusBar.cpp  StatusBar.h  TruncatableChoice.cpp  TruncatableChoice.h
code/datastructures/: FSOExecutable.cpp  FSOExecutable.h  FlagFileData.cpp  FlagFileData.h  FlagInfo.cpp  NewsSource.cpp  NewsSource.h  ResolutionMap.cpp  ResolutionMap.h
code/global/: BasicDefaults.cpp  BasicDefaults.h  Compatibility.cpp  Compatibility.h  MemoryDebugging.h  ModDefaults.cpp  ModDefaults.h  ModIniKeys.cpp  ModIniKeys.h  ProfileKeys.cpp  ProfileKeys.h  RegistryKeys.cpp  RegistryKeys.h  SkinDefaults.cpp  SkinDefaults.h  Utils.cpp  Utils.h  configure_launcher.h.in  ids.cpp  ids.h  targetver.h  version.cpp  version.h  version_strings.cpp.in
code/tabs/: AdvSettingsPage.cpp  AdvSettingsPage.h  BasicSettingsPage.cpp  BasicSettingsPage.h  InstallPage.cpp  InstallPage.h  ModsPage.cpp  ModsPage.h  WelcomePage.cpp  WelcomePage.h
documentation/: Eventflow.dia
onlinehelp/: MoreSpeechVoices.help  ReadMe.txt  index.help  jfaq.help  kauthors.help  lchanges.help
onlinehelp/10 Introduction/: 02 profiles.help  index.help  whats new.help
onlinehelp/10Introduction/: 01WhatsNew.help  02Profiles.help  03Languages.help  index.help
onlinehelp/20 Getting started/: index.help
onlinehelp/20GettingStarted/: 01basics.help  02advanced.help  index.help
onlinehelp/30 Reference/10 Welcome/: 01profiles.help  02news.help  index.help
onlinehelp/30 Reference/20 MODs/: index.help
onlinehelp/30Reference/: index.help
onlinehelp/30Reference/10Welcome/: 01language.help  02profiles.help  03news.help  index.help
onlinehelp/30Reference/20MODs/: 01modlist.help  activate.help  index.help  remove.help
onlinehelp/30Reference/30BasicSettings/: 01executable.help  021lighting.help  02video.help  03audio.help  04speech.help  05joystick.help  06network.help  index.help
onlinehelp/30Reference/40AdvancedSettings/: 01flaglist.help  021lighting.help  05flagsets.help  10customflags.help  15commandline.help  index.help
onlinehelp/30Reference/50InstallUpdate/: index.help
onlinehelp/40ForModders/: 01what.help  02reference.help  03sample.help  index.help
onlinehelp/50TechnicalStuff/: 01translating.help  02Terminology.help  03privacy.help  index.help
onlinehelp/Basic Settings/: graphicsAPI.help
onlinehelp/Introduction/: whats new.help
onlinehelp/Reference/: index.help
onlinehelp/Reference/10 Welcome/: index.help
onlinehelp/Reference/30 Basic Settings/: FS2RootFolder.help  MoreSpeechVoices.help
onlinehelp/Reference/Basic Settings/: graphicsAPI.help  index.help
onlinehelp/Reference/Install - Update/: index.help
onlinehelp/images/: readme.txt
platform/freedesktop/: wxLauncher.desktop.in
platform/macosx/: wxlauncher.icns
platform/win32/: registry_helper.cpp  wxlauncher.rc
scripts/: ReadMe.md  ReadMe.txt  ci.cmd  dataclasses.py  helpparsers.py  onlinehelpmaker.py  utilfunctions.py  version.cpp.maker.py  version_file_builder.py
scripts/ohm/: dataclasses.py  helpparsers.py  utilfunctions.py  version_file_builder.py
scripts/ohm/help_parsers/: helpparsers.py
scripts/ohm/jobs/: __init__.py  build.py  clean.py  rebuild.py
